crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-ml-06.stderr
TOML parse error at line 1, column 78
  |
1 | bad-uni-esc-ml-06 = """This string contains a non scalar unicode codepoint \uD801"""
  |                                                                              ^
invalid value, expected unicode hexadecimal value
